# rust-axum-basics

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  model.rs
src/error/: mod.rs
src/web/: routes_login.rs  routes_ticket.rs
tests/: quick_dev.rs
