[package]
name = "axum-basics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = {version = "0.7.9", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tower-http = { version = "0.6.2", features = ["fs"] }
tower-cookies = "0.10.0"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1.10"
